<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundTrangChu"
    android:orientation="vertical"
    tools:context=".View.KhamPhaActivity">
    <RadioGroup
        android:id="@+id/group_tab_radio"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/colorWhite">
        <RadioButton
            android:id="@+id/rb_moinhat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/moinhat"
            android:textColor="@drawable/changetext_tag_trangchu"
            android:button="@android:color/transparent"
            android:textAlignment="center"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:background="@drawable/changebackground_tab"
            android:layout_weight="1"
            android:checked="true"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundTrangChu"/>
        <RadioButton
            android:id="@+id/rb_danhmuc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/danhmuc"
            android:textColor="@drawable/changetext_tag_trangchu"
            android:button="@android:color/transparent"
            android:textAlignment="center"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:background="@drawable/changebackground_tab"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundTrangChu"/>
        <RadioButton
            android:id="@+id/rb_khuvuc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Khuvuc"
            android:textColor="@drawable/changetext_tag_trangchu"
            android:button="@android:color/transparent"
            android:textAlignment="center"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:background="@drawable/changebackground_tab"
            android:layout_weight="1"/>
    </RadioGroup>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:drawableLeft="@drawable/nearby"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:text="@string/gantoi"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="12sp"
                    app:backgroundTint="#FFFFFF"
                    app:cornerRadius="10dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:drawableLeft="@drawable/order"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:text="@string/giaohang"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="12sp"
                    app:backgroundTint="#FFFFFF"
                    app:cornerRadius="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:drawableLeft="@drawable/gameandfun"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:text="@string/gameandfun"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="12sp"
                    app:backgroundTint="#FFFFFF"
                    app:cornerRadius="10dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:drawableLeft="@drawable/review"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:text="@string/danhgia"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="12sp"
                    app:backgroundTint="#FFFFFF"
                    app:cornerRadius="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:drawableLeft="@drawable/blog"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:text="@string/blogs"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="12sp"
                    app:backgroundTint="#FFFFFF"
                    app:cornerRadius="10dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:paddingLeft="10dp"
                    android:paddingRight="0dp"
                    android:text="@string/topmember"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="12sp"
                    app:backgroundTint="#FFFFFF"
                    app:cornerRadius="10dp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <FrameLayout
        android:id="@+id/khungchuafragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </FrameLayout>
</LinearLayout>