<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Themquanan">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <EditText
                android:id="@+id/edTenQuanAn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorRed"
                android:hint="@string/tenquanan"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/edGiaToiDa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorRed"
                android:hint="@string/giatoida"
                android:inputType="number"
                android:text="0"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/edGiaToiThieu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorRed"
                android:hint="@string/giatoithieu"
                android:inputType="number"
                android:text="0"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <RadioGroup
                android:id="@+id/rdgTrangThai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdGiaoHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorBlack"
                    android:text="@string/giaohang"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />

                <RadioButton
                    android:id="@+id/rdKhongGiaoHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorBlack"
                    android:checked="true"
                    android:text="@string/khonggiaohang"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/giomocua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/giomocua"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/giodongcua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/giodongcua"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <VideoView
                    android:id="@+id/videoView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_themhinhanh" />

                <ImageView
                    android:id="@+id/imgVideo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>

            <HorizontalScrollView

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/khungTienIch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"></LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/khungChuaChiNhanh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <Spinner
                android:id="@+id/khuvucs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000">

            </Spinner>

            <ImageView
                android:id="@+id/imgHinhQuan1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_themhinhanh" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgHinhQuan2"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh" />

                <ImageView
                    android:id="@+id/imgHinhQuan3"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh" />

                <ImageView
                    android:id="@+id/imgHinhQuan4"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh" />

                <ImageView
                    android:id="@+id/imgHinhQuan5"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh" />

                <ImageView
                    android:id="@+id/imgHinhQuan6"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/khungChucThucDon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:id="@+id/btThemQuanAn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorRed"
                android:text="@string/luuquanan"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>