<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageChupHinh"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/img_mini_themhinh" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edTenMon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorRed"
                android:hint="@string/tenmon"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edGiaTien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorRed"
                    android:hint="@string/giatien"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />

                <Spinner
                    android:id="@+id/thucdons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#303030"></Spinner>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btThemThucDon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themthucdon"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btXoaThucDon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:text="Xóa thực đơn"
            android:textColor="@color/colorRed"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>